logs/games.log

<<<<<<< HEAD
2015-10-04T20:16:28.049Z - info: Number of currently running games #=1
=======

>>>>>>> master
2015-10-04T22:08:02.012Z - error: Not Found
2015-10-04T22:09:20.200Z - error: uncaughtException: /Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/src/js/components/GameBoard.js: Unexpected token (60:25)
  58 | 	[32m}[39m[37m[1m,[22m[39m
  59 | 	[37msetInitialState[39m[37m[1m:[22m[39m [36mfunction[39m[34m[1m([22m[39m[34m[1m)[22m[39m [32m{[39m
> 60 |     	 [32m{[39m[37mposition[39m[37m[1m:[22m[39m [33m[[39m[33m][39m[37m[1m,[22m[39m [37munit[39m[37m[1m:[22m[39m [36mnull[39m[32m}[39m [37m[1m=[22m[39m [36mthis[39m[37m[1m.[22m[39m[37mprops[39m[37m[1m;[22m[39m
     |                          ^
  61 |   	[32m}[39m[37m[1m,[22m[39m
  62 |   	[37mcomponentDidMount[39m[34m[1m([22m[39m[34m[1m)[22m[39m [32m{[39m
  63 | 		[37mconsole[39m[37m[1m.[22m[39m[37mlog[39m[34m[1m([22m[39m[31m"what's this node?"[39m[37m[1m,[22m[39m [37mReact[39m[37m[1m.[22m[39m[37mfindDOMNode[39m[34m[1m([22m[39m[36mthis[39m[34m[1m)[22m[39m[34m[1m)[22m[39m[37m[1m;[22m[39m date=Sun Oct 04 2015 18:09:20 GMT-0400 (EDT), pid=6019, uid=501, gid=20, cwd=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2, execPath=/usr/local/Cellar/node/0.12.7_1/bin/node, version=v0.12.7, argv=[node, /Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/bin/www], rss=76730368, heapTotal=62798336, heapUsed=38664184, loadavg=[1.33251953125, 1.55810546875, 1.6259765625], uptime=161235, trace=[column=15, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=raise, line=343, method=null, native=false, column=5, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=unexpected, line=2278, method=null, native=false, column=47, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=semicolon, line=2259, method=null, native=false, column=5, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseExpressionStatement, line=2882, method=null, native=false, column=14, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseStatement, line=2665, method=null, native=false, column=17, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseLabeledStatement, line=2874, method=null, native=false, column=18, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseStatement, line=2649, method=null, native=false, column=18, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseBlock, line=2905, method=null, native=false, column=26, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseStatement, line=2613, method=null, native=false, column=18, file=/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseBlock, line=2905, method=null, native=false], stack=[SyntaxError: /Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/src/js/components/GameBoard.js: Unexpected token (60:25),   58 | 	[32m}[39m[37m[1m,[22m[39m,   59 | 	[37msetInitialState[39m[37m[1m:[22m[39m [36mfunction[39m[34m[1m([22m[39m[34m[1m)[22m[39m [32m{[39m, > 60 |     	 [32m{[39m[37mposition[39m[37m[1m:[22m[39m [33m[[39m[33m][39m[37m[1m,[22m[39m [37munit[39m[37m[1m:[22m[39m [36mnull[39m[32m}[39m [37m[1m=[22m[39m [36mthis[39m[37m[1m.[22m[39m[37mprops[39m[37m[1m;[22m[39m,      |                          ^,   61 |   	[32m}[39m[37m[1m,[22m[39m,   62 |   	[37mcomponentDidMount[39m[34m[1m([22m[39m[34m[1m)[22m[39m [32m{[39m,   63 | 		[37mconsole[39m[37m[1m.[22m[39m[37mlog[39m[34m[1m([22m[39m[31m"what's this node?"[39m[37m[1m,[22m[39m [37mReact[39m[37m[1m.[22m[39m[37mfindDOMNode[39m[34m[1m([22m[39m[36mthis[39m[34m[1m)[22m[39m[34m[1m)[22m[39m[37m[1m;[22m[39m,     at raise (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:343:15),     at unexpected (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2278:5),     at semicolon (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2259:47),     at parseExpressionStatement (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2882:5),     at parseStatement (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2665:14),     at parseLabeledStatement (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2874:17),     at parseStatement (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2649:18),     at parseBlock (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2905:18),     at parseStatement (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2613:26),     at parseBlock (/Users/karenmaoMac/FS_Seniors/shougun/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2905:18)]
2015-10-04T23:02:38.065Z - error: behavior is not defined
2015-10-04T23:28:11.005Z - info: Number of currently running games #=1
2015-10-05T03:45:39.694Z - info: Number of currently running games #=1
2015-10-05T03:56:50.022Z - info: Number of currently running games #=1
2015-10-05T04:02:23.752Z - info: Number of currently running games #=1
2015-10-05T04:06:28.920Z - info: Number of currently running games #=1
2015-10-05T04:10:34.045Z - info: Number of currently running games #=2
2015-10-05T04:11:44.514Z - info: Number of currently running games #=2
2015-10-05T04:13:11.264Z - info: Number of currently running games #=1
2015-10-05T04:14:17.917Z - info: Number of currently running games #=1
2015-10-05T04:50:31.555Z - info: Number of currently running games #=1
2015-10-07T02:16:26.328Z - info: Number of currently running games #=1
